began to implement rules
